--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: Welcome to the Alchemy Seeker's on Machine Learning homepage!
-description: feel free to bookmark this to keep an eye on my prjects and interest. 
+description: Feel free to bookmark this to keep an eye on my prjects and interest. 
