--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-cayman
-title: Welcome to Seeker's Alchemy on Machine Learning homepage!
+
+title: Welcome to  the tireless Seeker's Alchemy on Machine Learning homepage!
+
 description: Feel free to bookmark this to keep an eye on my prjects and interest. 
