--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,8 @@
 theme: jekyll-theme-cayman
 
-title: Welcome to  the tireless Seeker's Alchemy on Machine Learning homepage!
+title: Seeker's Machine LearningAlchemy !
 
-description: Feel free to bookmark this to keep an eye on my prjects and interest. 
+description:  A collection of projects on Machine learning, Artifical Intelligence and FinTECH
+Bullets
+
+Looking to meet people that will help me learn new nd usuful things and maybe make a friend or two. 
