--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 theme: jekyll-theme-cayman
 
-title: Seeker's Machine LearningAlchemy !
+title: Seeker's Machine Learning Alchemy Projects!
 
-description:  A collection of projects on Machine learning, Artifical Intelligence and FinTECH
+description:  A collection of projects on Machine learning, Artifical Intelligence and FinTECH & Trading
 Bullets
 
 Looking to meet people that will help me learn new nd usuful things and maybe make a friend or two. 
