--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,4 @@ theme: jekyll-theme-cayman
 title: Seeker's Machine Learning Alchemy Projects!
 
 description:  A collection of projects on Machine learning, Artifical Intelligence and FinTECH & Trading
-
-Looking to meet people that will help me learn new nd usuful things and maybe make a friend or two. 
+>Looking to meet people that will help me learn new nd usuful things and maybe make a friend or two. 
