--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ theme: jekyll-theme-cayman
 
 title: Seeker's Machine Learning Alchemy Projects!
 
-description:  A collection of projects on Machine learning, Artifical Intelligence and FinTECH & Trading|Looking to meet people that will help me learn new nd usuful things and maybe make a friend or two
+description:  A collection of projects on Machine learning, Artifical Intelligence, FinTECH & Trading|Looking to meet people that will help me learn new nd usuful things and maybe make a friend or two
 . 
