--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ theme: jekyll-theme-cayman
 
 title: Seeker's Machine Learning Alchemy Projects!
 
-description:  A collection of projects on Machine learning, Artifical Intelligence, FinTECH & Trading|Looking to meet people that will help me learn new nd usuful things and maybe make a friend or two. Do  rech out if you a friend.
+description:  Projects on Machine learning, Artifical Intelligence, FinTECH & Trading|Looking to meet people that will help me learn new and useuful things, and maybe just maybe, make a friend or two. Do  rech out if you a friend.
