--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-cayman
 
-title: Seeker's Machine Learning Alchemy Projects!
+title: Machine Learning Alchemy Works of Art and Genius!
 
-description:  Projects on Machine learning, Artifical Intelligence, FinTECH & Trading|Looking to meet people that will help me learn new and useuful things, and maybe just maybe, make a friend or two. Do  rech out if you a friend.
+description:  Projects on Machine learning, Artifical Intelligence, FinTECH & Trading|Looking to meet people that will help me learn new and useuful things, and maybe just maybe, make a friend or two. Do  rech out if you a friend.> I am trying to figure out how to do this.
