--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,6 @@ theme: jekyll-theme-cayman
 
 title: Machine Learning Alchemy Works of Art and Genius!
 
-description: Projects on Machine learning, Artifical Intelligence, FinTECH & Trading|Looking to meet people that will help me learn new and useuful things, and maybe just maybe, make a friend or two. Do  rech out if you a friend.> I am trying to figure out how to do this.
+description: Projects on Machine learning, Artifical Intelligence, FinTECH & Trading|Looking to meet people that will help me learn new and usefull IT, and maybe just maybe, make a friend or two. 
+I have nothing else to say
 
