--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,7 @@ theme: jekyll-theme-cayman
 
 title: Machine Learning Alchemy Works of Art and Genius!
 
-description: Projects on Machine learning, Artifical Intelligence, FinTECH & Trading|
-Looking to meet people that will help me learn new and usefull IT, and maybe just maybe, make a friend or two. 
+description: Projects on Machine learning, Artifical Intelligence, FinTECH & Trading>  Looking to meet people that will help me learn new and usefull IT, and maybe just maybe, make a friend or two. 
 
 
 
