--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 theme: jekyll-theme-cayman
 
-title: Machine Learning Alchemy Works of Art and Genius!
+title: "Machine Learning Alchemy Works of Art and Genius!"
 
 description: Projects on Machine learning, Artifical Intelligence, FinTECH & Trading
+
+Timezone: Europe/Spain
