Set theme jekyll-theme-cayman

--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,5 @@ title: "Machine Learning Alchemy Works of Art and Genius!"
 description: Projects on Machine learning, Artifical Intelligence, FinTECH & Trading
 
 Timezone: Europe/Spain
+
+theme: jekyll-theme-cayman
