Set theme jekyll-theme-slate

--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@ description: Projects on Machine learning, Artifical Intelligence, FinTECH & Tra
 
 Timezone: Europe/Spain
 
-theme: jekyll-theme-cayman
+theme: jekyll-theme-slate
